--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Imperial Footwear Sneaker Store",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch back-end-configuration --exec babel-node back-end-configuration/server.js"
+    "start": "nodemon --watch back-end-configuration --exec babel-node back-end-configuration/server.js",
+    "build": "rm -rf dist && babel back-end-configuration -d dist",
+    "heroku-postbuild": "npm run build && cd front-end-display && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,10 @@
     "url": "https://github.com/hugonzb/Imperial-Footwear/issues"
   },
   "homepage": "https://github.com/hugonzb/Imperial-Footwear#readme",
+  "engines": { 
+    "node": "12.4.0",
+    "npm": "6.9.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
