--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/hugonzb/Imperial-Footwear/issues"
   },
   "homepage": "https://github.com/hugonzb/Imperial-Footwear#readme",
-  "engines": { 
+  "engines": {
     "node": "12.4.0",
     "npm": "6.9.0"
   },
@@ -31,7 +31,8 @@
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.19"
+    "mongoose": "^5.9.19",
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
